OpenUrlJob: always open ECMA/Javascript as text

Per the bug report, it doesn't seem useful to ask whether to open or
execute with ECMAScript or JavaScript (".es" or ".js") files.

BUG: 429839
FIXED-IN: 5.77